--- a/css/all.css
+++ b/css/all.css
@@ -2,8 +2,8 @@
    v2.0 | 20110126
    License: none (public domain)
 */
-html, body, div, span, applet, object, iframe, button h1,
-h2, h3, h4, h5, h6, p, blockquote, pre,
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var,
@@ -129,7 +129,6 @@ h3 {
   color: #00FFA3;
   text-align: right;
   font-size: 128px;
-  margin: 0;
   font-weight: 400;
 }
 
