--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -155,7 +155,7 @@ h3{
 	color: #15161D;
 }
 
-.contact{
+.socia{
 	background: linear-gradient(180deg, #050014 0%, rgba(1, 2, 30, 0.89) 100%);
 }
 
@@ -164,13 +164,13 @@ h3{
 	margin: 0;
 }
 
-.contact-content{
+.socia-content{
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
 }
 
-.social{
+.contact{
 	display: flex;
 	gap:16px;
 }
