--- a/css/all.css
+++ b/css/all.css
@@ -256,9 +256,14 @@ h3 {
   gap: 20px;
 }
 
+.social-icon img {
+  transition: transform 0.5s ease-in-out;
+}
+
 .social-icon img:hover {
   box-shadow: 0px 0px 16px 3px rgba(144, 148, 255, 0.8980392157);
   border-radius: 40px;
+  transform: scale(1.1);
 }
 
 .porject h2 {
