--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -182,9 +182,14 @@ h3{
 	gap: 20px;
 }
 
+.social-icon img{
+	transition: transform 0.5s ease-in-out;
+}
+
 .social-icon img:hover {
 	box-shadow: 0px 0px 16px 3px #9094FFE5;
 	border-radius: 40px;
+	transform: scale(1.1);
 }	
 
 .porject h2{
